Solucionado el tema de envio de informacion a travez de inputs, mediante REQUEST.form , donde todos los metodos funciona

--- a/templates/mostrar.html
+++ b/templates/mostrar.html
@@ -12,7 +12,7 @@ MOSTRAR
 
 <form action="{{ url_for('mostrar') }}" method="post">
 
-    
+    <button type="submit">MOSTRAR TUS FACTURAS</button>
 
 </form>
 
