--- a/templates/home.html
+++ b/templates/home.html
@@ -8,58 +8,85 @@ CALCULADORA
 
 {% block header %}
 
-<div class="titulo">
-
-<h1>BIENVENIDO A TU CALCULADORA FAVORITA</h1>
-
-</div>
-
 {% endblock %}
 
 {% block main %}
 
-<form action="{{ url_for('home') }}" method="post">
+
 
 <div class="contenedor">
 
-    <input type="number" name="valor1">
+        <form action="{{ url_for('home') }}" method="post">
 
-    <input type="number" name="valor2">
+    <!-- titulo -->
 
-    <select name="operador">
-        <option value="+">
-            +
-        </option>
+    <h3 class="title is-3">CALCULADORA</h3>
 
-        <option value="-">
-         -
-        </option>
-        
-        <option value="*">
-         *
-        </option>
+    <!--valor 1-->
 
-        <option value="/">
-         /
-        </option>
+    <div class="field">
+            <div class="control">
 
-        <option value="**">
-            **
-        </option>
-
-        <option value="√">
-            √
-        </option>
+                    <label class="label">Ingresa el primer numero</label>
+              <input name="valor1"class="input is-primary" type="number" placeholder="Primary input">
+            </div>
+          </div>
 
 
-    </select>
+    <!-- operador -->
 
-    <button class="botonCalcular">
-        CALCULAR
-    </button>
+    <div class="field">
+            <div class="control">
+              <div class="select is-large">
+                <select name="operador">
+                        <option value="+">
+                                +
+                            </option>
+                    
+                            <option value="-">
+                             -
+                            </option>
+                            
+                            <option value="*">
+                             *
+                            </option>
+                    
+                            <option value="/">
+                             /
+                            </option>
+                    
+                            <option value="**">
+                                **
+                            </option>
+                    
+                            <option value="√">
+                                √
+                            </option>
+                </select>
+              </div>
+            </div>
+          </div>
 
+
+    <!-- valor 2-->
+
+    <div class="field">
+        <div class="control">
+
+                <label class="label">Ingresa el segundo numero</label>
+            <input name="valor2"class="input is-primary" type="number" placeholder="Primary input">
+        </div>
+        </div>
+
+    <!-- calcular -->
+
+    <div class="control">
+            <button class="button is-primary">CALCULAR</button>
+          </div>
+
+        </form>
 </div>
 
-</form>
+
 
 {% endblock %}
