--- a/templates/resultado.html
+++ b/templates/resultado.html
@@ -8,11 +8,6 @@ RESULTADO OPERACION
 
 {% block header %}
 
-<div class="titulo">
-
-<h1>RESULTADO</h1>
-
-</div>
 
 {% endblock %}
 
@@ -20,13 +15,17 @@ RESULTADO OPERACION
 
 
 
-<div class="contenedor">
+<div class="contenedorResultado">
 
-<h1>El resultado de la operacion es el siguiente: </h1>
+        <h3 class="title is-3">RESULTADO</h3>
+
+        <h4 class="title is-4">El resultado de la operacion es el siguiente: </h4>
 
 <br>
 
-{{ resultado }}
+<h2 class="title is-2">{{ resultado }}</h2>
+
+<a class="button is-info" href="{{ url_for('home') }}">VOLVER</a>
 
 </div>
 
