--- a/templates/home.html
+++ b/templates/home.html
@@ -64,7 +64,7 @@ CALCULADORA
                             </option>
                     
                             <option value="**">
-                                **
+                                Potencia
                             </option>
                 </select>
               </div>
