--- a/templates/signo.html
+++ b/templates/signo.html
@@ -18,7 +18,11 @@ HOROSCOPO
         
         <h5 class="subtitle is-6">Tu signo es el siguiente: </h5>
 
+        <br>
+
     <!--SVG signo-->
+
+    <h3 class="title is-5">{{ signo }}</h3>
 
 {% set svgSigno = 'svg/' + signo + '.svg' %}
 
