Comentarios y CSS, Bulma agregados

--- a/templates/home.html
+++ b/templates/home.html
@@ -64,15 +64,23 @@ CAJERO AUTOMATICO
 
     {% if mensaje != '' %}
 
-        <h1>{{ mensaje }}</h1>
+        <h1 class="title is-3">{{ mensaje }}</h1>
 
     {% endif %}
 
     <!--*********************************************-->
 
-    
+  
+    <h3 class="subtitle is-6">Aqui estan los codigos para poder acceder,</h3>
+        <h3 class="subtitle is-6">los cuales obviamente no aparecen en la vida real.</h3>
+        <h3 class="subtitle is-6">Algunos como: 123456, 545657, 667678</h3>
+            <h3 class="subtitle is-6">o los puede mirar en static/json/cuentas.json</h3>
+                
+  
 
 </form>
+
+
 
 </div>
 
