--- a/templates/opciones.html
+++ b/templates/opciones.html
@@ -54,8 +54,13 @@ OPCIONES
         {% endfor %}
 
         <!--*********************************************-->
+        
 
 </div>
+
+<br>
+        <br>
+        <a class="button is-link is-rounded" id="volver" href="{{ url_for('home') }}">SALIR</a>
 
 
 
