Se agregaron unas cosas mas como condicional de jinja por si no se han realizado ningun movimiento aún. Pero todo correcto.

--- a/templates/movimientos.html
+++ b/templates/movimientos.html
@@ -65,6 +65,12 @@ MOVIMIENTOS
 
 {% endif%}
 
+{% if movimientos|length == 0 %}
+
+<h1 class="title is-4">No se han realizado movimientos aún</h1>
+
+{% endif %}
+
 <!--************************************************-->
 
 <a class="button is-link is-rounded" id="volver" href="{{ url_for('opciones') }}">VOLVER</a>
