segundo commit, se ha agregado login y registro del usuario

--- a/templates/juegoDados.html
+++ b/templates/juegoDados.html
@@ -2,19 +2,11 @@
 
 {% block header %}
 
-
+<h1> juegoDatos</h1>
 
 {% endblock %}
 
 {% block main %}
-
-<a href="{{ url_for('registro') }}">REGISTRARSE</a>
-
-<br>
-
-<a href="{{ url_for('usuario') }}">INGRESAR PARA JUGAR</a>
-
-<br>
 
 
 
