medidas.html y su parte de codigo ya funcionan, la información sobre las medidas se agrega correctamente al documento en mongoDB

--- a/templates/medidas.html
+++ b/templates/medidas.html
@@ -78,6 +78,10 @@
         </button>
     </form>
 
+    <button>
+            <a href="{{ url_for('home') }}">VOLVER</a>
+        </button>
+
 </div>
 
 {% endblock %}
