--- a/templates/home.html
+++ b/templates/home.html
@@ -20,6 +20,12 @@
     <a href="{{ url_for('crearFicha') }}">CREAR NUEVA FICHA</a>
 </button>
 
+<br>
+
+<button>
+    <a href="{{ url_for('verFicha') }}">VER FICHA</a>
+</button>
+
 </div>
 
 {% endblock %}
