--- a/templates/medidas.html
+++ b/templates/medidas.html
@@ -78,9 +78,13 @@
         </button>
     </form>
 
+    <form action="{{ url_for('home') }}" method="post">
+
     <button>
-            <a href="{{ url_for('home') }}">VOLVER</a>
+            VOLVER
         </button>
+
+    </form>
 
 </div>
 
