--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,7 +10,7 @@
     
     <title>
         {% block title %}
-            JUEGO DADOS
+            INMOBILIARÍA
         {% endblock %}
     </title>
 </head>
