se agrego css, dentro de lo que se pudo, y se mejoro como se ve los resultados de verFicha.html

--- a/templates/crearFicha.html
+++ b/templates/crearFicha.html
@@ -22,7 +22,13 @@
 
         <label for="propietario">
             Nombre Propietario
-        <input type="text" name="nombrePropietario" required>
+
+
+        <div class="field">
+                <div class="control">
+                  <input class="input is-primary" type="text" placeholder="Primary input" required name="nombrePropietario">
+                </div>
+              </div>
         </label>
 
         <br>
@@ -31,7 +37,13 @@
 
         <label for="numeroPropietario">
             Número Propietario
-        <input type="number" name="numeroPropietario" required>
+    
+
+        <div class="field">
+                <div class="control">
+                  <input class="input is-primary" type="number" placeholder="Primary input" required name="numeroPropietario">
+                </div>
+              </div>
         </label>
 
         <br>
@@ -40,7 +52,13 @@
 
         <label for="dni">
             DNI
-        <input type="number" name="dni" required>
+      
+
+        <div class="field">
+                <div class="control">
+                  <input class="input is-primary" type="number" placeholder="Primary input" required name="dni">
+                </div>
+              </div>
         </label>
 
         <br>
@@ -49,7 +67,13 @@
 
         <label for="email">
             Email
-        <input type="email" name="email" required>
+        
+
+        <div class="field">
+                <div class="control">
+                  <input class="input is-primary" type="email" placeholder="Primary input" required name="email">
+                </div>
+              </div>
         </label>
 
         <br>
@@ -62,7 +86,13 @@
 
         <label for="direccion">
             Dirección
-        <input type="text" name="direccion" required>
+        
+
+        <div class="field">
+                <div class="control">
+                  <input class="input is-primary" type="text" placeholder="Primary input" required name="direccion">
+                </div>
+              </div>
         </label>
 
         <br>
@@ -92,7 +122,13 @@
 
         <label for="planta">
             Nº Planta (Opcional)
-            <input type="number" name="planta" value="">
+           
+
+            <div class="field">
+                    <div class="control">
+                      <input class="input is-primary" type="number" placeholder="Primary input" name="planta">
+                    </div>
+                  </div>
         </label>
 
         <br>
@@ -101,7 +137,13 @@
 
         <label for="puerta">
                 Nº Puerta (Opcional)
-                <input type="number" name="puerta" value="">
+              
+
+                <div class="field">
+                        <div class="control">
+                          <input class="input is-primary" type="number" placeholder="Primary input" name="puerta">
+                        </div>
+                      </div>
             </label>
 
         <br>
@@ -127,7 +169,13 @@
 
         <label for="precio">
             Precio
-            <input type="number" name="precio" required>
+           
+
+            <div class="field">
+                    <div class="control">
+                      <input class="input is-primary" type="number" placeholder="Primary input" required name="precio">
+                    </div>
+                  </div>
         </label>
 
         <br>
