--- a/templates/medidas.html
+++ b/templates/medidas.html
@@ -23,7 +23,13 @@
         <!--Superficie/area total vivienda-->
         <label for="superficietotal">
             Superficie Total Vivienda (m2)
-            <input type="number" name="superficieTotal" required>
+          
+
+            <div class="field">
+                    <div class="control">
+                      <input class="input is-primary" type="number" placeholder="Primary input" name="superficieTotal" required>
+                    </div>
+                  </div>
         </label>
 
         <br>
@@ -31,7 +37,13 @@
         <!--Superficie/Área por habitación-->
         <label for="superficieHab">
                 Superficie por Habitación (m2)
-                <input type="number" name="superficieHabitacion" required>
+               
+
+                <div class="field">
+                        <div class="control">
+                          <input class="input is-primary" type="number" placeholder="Primary input" name="superficieHabitacion" required>
+                        </div>
+                      </div>
             </label>
 
             <br>
@@ -39,7 +51,13 @@
         <!--Altura Libre-->
         <label for="altura">
                 Altura de la Vivienda (m)
-                <input type="number" name="altura" required>
+                
+
+                <div class="field">
+                        <div class="control">
+                          <input class="input is-primary" type="number" placeholder="Primary input" required name="altura">
+                        </div>
+                      </div>
             </label>
 
             <br>
@@ -48,7 +66,13 @@
 
         <label for="cocina">
                 Superficie Total de la Cocina (m2)
-                <input type="number" name="cocina" required>
+               
+
+                <div class="field">
+                        <div class="control">
+                          <input class="input is-primary" type="number" placeholder="Primary input" required name="cocina">
+                        </div>
+                      </div>
             </label>
 
             <br>
@@ -58,6 +82,12 @@
         <label for="salaPrincipal">
                 Superficie Total de la Sala Principal (m2)
                 <input type="number" name="salaPrincipal" required>
+
+                <div class="field">
+                        <div class="control">
+                          <input class="input is-primary" type="number" placeholder="Primary input" required name="salaPrincipal">
+                        </div>
+                      </div>
             </label>
 
             <br>
@@ -67,6 +97,12 @@
         <label for="banyo">
                 Superficie Total del baño (m2)
                 <input type="number" name="banyo" required>
+
+                <div class="field">
+                        <div class="control">
+                          <input class="input is-primary" type="number" placeholder="Primary input" required name="banyo">
+                        </div>
+                      </div>
             </label>
 
     
