--- a/templates/verFicha.html
+++ b/templates/verFicha.html
@@ -78,7 +78,11 @@
 
         <label for="dni">
                 DNI
-            <input type="number" name="dni" required>
+                <div class="field">
+                        <div class="control">
+                          <input class="input is-primary" type="text" placeholder="Primary input" name="dni" required>
+                        </div>
+                      </div>
             </label>
     
             <br>
@@ -87,7 +91,12 @@
 
         <label for="propietario">
                 Nombre Propietario
-            <input type="text" name="nombrePropietario" required>
+
+            <div class="field">
+                    <div class="control">
+                      <input class="input is-primary" type="text" placeholder="Primary input" name="nombrePropietario">
+                    </div>
+                  </div>
             </label>
     
             <br>
@@ -102,7 +111,15 @@
 
     {% for i in listaBusqueda %}
 
-    <h1>{{ i }}</h1>
+    <h1> DATOS PROPIETARIO: {{ i['datosPropietario'] }}</h1>
+
+    <br>
+
+    <h1> DATOS VIVIENDA: {{ i['datosVivienda'] }}</h1>
+
+    <br>
+
+    <h1> DATOS MEDIDAS: {{ i['medidasVivienda'] }}</h1>
 
     <br>
 
